# durga

./: .editorconfig  .gitignore  AGENTS.md  CHANGES.md  Dockerfile.feed  Dockerfile.monitor  LICENSE  README.md  durga  durga-monitor  pom.xml
camunda-modeler-plugin/: README.md  generate-catalog.js  index.js  package-lock.json  package.json  webpack.config.js
config/: checkstyle-suppressions.xml  checkstyle.xml  spotbugs-exclude.xml
doc/: beta-support-boundary.md  bpmn-kafka-coverage.md  data-pipeline-assets.md  data-pipeline-blueprint.md  data-pipeline-suitability-analysis.md  deployment.md  durga-vs-classical.md  maturity-plan.md  operations-hardening.md  release-checklist.md  roundtrip-engineering.md  testcontainers-setup.md
durga-demo/: pom.xml
durga-monitor/: pom.xml
durga-runtime/: pom.xml
durga-rust/: Cargo.toml
durga-rust-build/: Cargo.toml
durga-rust-build/src/: lib.rs
durga-rust/src/: event.rs  expr.rs  lib.rs  pipeline.rs  plugin.rs  result.rs  validation.rs  worker.rs
durga-rust/src/plugins/: field_filter.rs  field_router.rs  format_detector.rs  json_flatten.rs  json_schema_validator.rs  json_transform.rs  kv_enricher.rs  mask.rs  mod.rs  object_store.rs  object_store_collector.rs  object_store_extractor.rs  regex_extract.rs  string_template.rs  timestamp_normalize.rs  type_coercion.rs  uuid_inject.rs  window_counter.rs
durga-tools/: pom.xml
monitoring-ui/: index.html  package-lock.json  package.json  vite.config.js
plugins/: catalog.yml
scripts/: fix-bpmn-diagrams.py  run-e2e-test.sh  run-e2e-validation.sh
setup/: config.yml  (+5 more)
(+359 files in other folders)
